# neuromorphicAI

./: .gitignore  .gitmodules  CMakeLists.txt  NOTICE  Pyramidal neuron.txt  README.md  gpu_snn.py  neuro_pyramidal_.py  pyramidal_neuron_cupy.py  snn_data_sender.py  test2.py
biophysical_grammar_ai/NewNeuroSys/: NewNeuroSysWorks.txt  detailed_snn.py  gpu_snn.py  neuron_kernels.cu
biophysical_grammar_ai/ai/: pipeline.py
biophysical_grammar_ai/neuro/: circuits.py  grammar.py
docs/: NewNeuroSysWorks.txt  backend.txt  pyramidal_neuron.py  requirement.txt  vulkan구상계획.txt  구조변경.txt  누락된_기능.txt  학습모델확장계획.txt  해결해야할_문제점.txt  확장_목표.txt
example/: test2.py
examples/: run_single_neuron.py  single_neuron_results.npz
modelData/tokenizer/: spm.model  spm.vocab
new neuron code/: pyramidal_neuron.py  required calculate material.txt
python/: gpu_vulkan_bridge.py  vkdbg.cp312-win_amd64.pyd  vulkan_setup.cp312-win_amd64.pyd
src/: config.py  gpu_debug_sender.py  gpu_snn.py  main.py  neuro_pyramidal.py  neuro_pyramidal_nrml.py  neuron_structs.py  pyramidal_layer.cu  pyramidal_layer.py  pyramidal_neuron.cu  snn_visualizer_client.py  synapse_structs.py  tokenizer_utils.py  train_snn.py
src/backend/: neuro_pyramidal.py  torch_wrapper.py
src/backend/torch_extension/: TODO.txt  __init__.py  ops.cpp  ops_cuda.cu  setup.py
src/cpu/: logging.py  network_mgr.py  plasticity.py  stimulus.py  topology.py  visualization.py
src/expansion/: pyramidal_neuron.py
src/gpu/: axon_ops.py  gpu_utils.py  neuron_ops.py  plasticity_ops.py  synapse_ops.py
src/kernels/: axon_kernel.cu  common.h  neuron_kernel.cu  neuron_kernels.cu  plasticity_kernel.cu  synapse_kernel.cu  utils_kernel.cu
src/optimization/: neuro_perceptron.py
src/test/: test_torch_extension.py  test_torch_wrapper.py
src/text/: embedding.py  encoder.py  tokenizer.py
src/vkdbg/: CMakeLists.txt  control_app.cpp  control_app.hpp  main.cpp  vkdbg.cpp  vulkan_setup.cpp
src/vkdbg/python/: vkdbg.cp312-win_amd64.pyd
src/vkdbg/shaders/: simple_2d.frag  simple_2d.vert
src/vkdbg/systems/: neuron_render_system.cpp  neuron_render_system.hpp  snn_data_reader.cpp  snn_data_reader.hpp
src/vulkan/: .env.cmake  CMakeLists.txt  msys2Build.bat
src/vulkan/shaders/: debug_ray.vert.spv  neuron.frag  neuron.frag.spv  neuron.vert  neuron.vert.spv  simple_shader.frag.spv  simple_shader.vert.spv
src/vulkan/src/: control_app.cpp  control_app.hpp  lve_camera.cpp  lve_camera.hpp  lve_descriptors.hpp  lve_device.cpp  lve_device.hpp  lve_frame_info.hpp  lve_game_object.cpp  lve_game_object.hpp  lve_model.cpp  lve_model.hpp  lve_pipeline.cpp  lve_renderer.cpp  lve_renderer.hpp  lve_swap_chain.cpp  lve_window.cpp  lve_window.hpp  main.cpp
src/vulkan/src/debug/: dear_imgui.cpp  dear_imgui.hpp
src/vulkan/src/systems/: simple_2d_render_system.cpp  simple_2d_render_system.hpp
test/: _get_new_shared_buffer.txt  hierarchical_multilayer_training.py  pytest.ini  snn_data_sender.py  test_hierarchical_learning.py  test_hierarchical_multilayer_training.py  test_layer_equivalence.py  test_network_competition.py  test_pattern_recognition.py  test_pyramidal_neuron.py  test_pyramidal_neuron_matplt.py  test_pyramidal_neuron_pytest.py  test_reinforcement_learning.py  test_single_synapse.py  test_stdp.py  test_text_snn_pipeline.py
